Atualização no CSS
Atualização no CSS

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores beatae culpa magni, cum deserunt non optio minus, recusandae harum omnis et? Voluptas architecto reprehenderit soluta eum error mollitia aliquid illo.</p>
 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eum, cupiditate molestiae iusto ipsa neque at, ipsam ad consequuntur animi labore porro fugit dolorum illo! Odit impedit unde deleniti quaerat?</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores beatae culpa magni, cum deserunt non optio minus, recusandae harum omnis et? Voluptas architecto reprehenderit soluta eum error mollitia aliquid illo.</p>
+
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, illum odio! Corporis voluptatibus fugit repellat, animi quia ducimus magni laudantium obcaecati reiciendis temporibus cumque deleniti magnam maxime dignissimos. Laborum, unde.</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil commodi deserunt odit, illo labore voluptates? Repudiandae esse neque perspiciatis praesentium. Et in modi, dolorem ipsam rerum molestiae porro sequi repellendus.</p>
