--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, odio fuga incidunt voluptatum nulla ab magni repudiandae saepe?</p>
         <div>
             <ul>
-                <ul><a href="#">HOME</a></ul>
-                <ul><a href="#">HOME</a></ul>
-                <ul><a href="#">HOME</a></ul>
-                <ul><a href="#">HOME</a></ul>
+                <a href="#">HOME</a>
+                <a href="#">HOME</a>
+                <a href="#">HOME</a>
+                <a href="#">HOME</a>
             </ul>
         </div>
     </header>
