--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <header>
         <h1>Titulo do Site</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, odio fuga incidunt voluptatum nulla ab magni repudiandae saepe?</p>
-        <div>
+        <nav>
             <ul>
                 <a href="#">HOME</a>
                 <a href="#">HOME</a>
                 <a href="#">HOME</a>
                 <a href="#">HOME</a>
             </ul>
-        </div>
+        </nav>
     </header>
     <main>
         <section>
