Atualizações sobre a disposição do header e o CSS do site
Atualizações sobre a disposição do header e o CSS do site

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="media-query.css">
     <title>Site</title>
 </head>
 <body>
@@ -45,11 +46,12 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil commodi deserunt odit, illo labore voluptates? Repudiandae esse neque perspiciatis praesentium. Et in modi, dolorem ipsam rerum molestiae porro sequi repellendus.</p>
         </section>
-        <article>
-            <h3>Extras 1</h3>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique necessitatibus quibusdam ut labore voluptate corrupti soluta repudiandae sint eius natus! Tempora ipsa illum pariatur consequuntur atque facere quas ducimus beatae?</p>
-        </article>
+        <section class="box-image">
+            <article>
+                <h3>Extras 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique necessitatibus quibusdam ut labore voluptate corrupti soluta repudiandae sint eius natus! Tempora ipsa illum pariatur consequuntur atque facere quas ducimus beatae?</p>
+            </article>
+        </section>
     </main>
     <footer>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt saepe voluptas rerum?</p>
