Atualização do arquivo CSS do site
Atualização do arquivo CSS do site

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <nav>
             <ul>
                 <a href="#">HOME</a>
-                <a href="#">HOME</a>
-                <a href="#">HOME</a>
+                <a href="#">SERVICE</a>
+                <a href="#">CONTACT</a>
                 <a href="#">HOME</a>
             </ul>
         </nav>
