--- a/index.html
+++ b/index.html
@@ -10,28 +10,32 @@
 <body>
     <header>
         <h1>Titulo do Site</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi, odio fuga incidunt voluptatum nulla ab magni repudiandae saepe?</p>
-        <nav>
+        <nav id="menu">
             <ul>
-                <a href="#">HOME</a>
-                <a href="#">SERVICE</a>
-                <a href="#">CONTACT</a>
-                <a href="#">HOME</a>
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SERVICE</a></li>
+                <li><a href="#">CONTACT</a></li>
+                <li><a href="#">HOME</a></li>
             </ul>
-        </nav>
+        </nav id="menu">
     </header>
     <main>
-        <section>
+        <section class="box1">
             <h2>Subtitulo 1</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. In, maxime. Eveniet, commodi eligendi? Dicta, quo culpa itaque nobis nesciunt error impedit autem temporibus dolor earum at et optio, blanditiis ducimus.</p>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit voluptatibus, explicabo dolores hic quos, pariatur repellat quibusdam fugiat non vero eveniet repellendus exercitationem molestiae. At error labore magni nostrum aut!</p>
 
-            <img src="" alt="">
+            <div id="foto1">
+                <picture class="foto-um">
+                    <source media="(min-width: 410px)" srcset="">
+                    <img src="imagens/imagem310x207.png" alt="Imagem">
+                </picture>
+            </div>
 
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque sint ab sed. Laboriosam quod quis a possimus, ipsum esse voluptates eius animi vero error eligendi sequi, minima deleniti praesentium laborum!</p>
         </section>
-        <section>
+        <section class="box2">
             <h2>Subtitulo 2</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eum, cupiditate molestiae iusto ipsa neque at, ipsam ad consequuntur animi labore porro fugit dolorum illo! Odit impedit unde deleniti quaerat?</p>
@@ -40,16 +44,27 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos eum, cupiditate molestiae iusto ipsa neque at, ipsam ad consequuntur animi labore porro fugit dolorum illo! Odit impedit unde deleniti quaerat?</p>
 
+            <div id="foto2">
+                <picture class="foto-dois">
+                    <source media="(min-width: 410px)" srcset="">
+                    <img src="imagens/trabalho310x207.png" alt="Imagem-trabalho">
+                </picture>
+                
+            </div>
+
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores beatae culpa magni, cum deserunt non optio minus, recusandae harum omnis et? Voluptas architecto reprehenderit soluta eum error mollitia aliquid illo.</p>
 
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, illum odio! Corporis voluptatibus fugit repellat, animi quia ducimus magni laudantium obcaecati reiciendis temporibus cumque deleniti magnam maxime dignissimos. Laborum, unde.</p>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil commodi deserunt odit, illo labore voluptates? Repudiandae esse neque perspiciatis praesentium. Et in modi, dolorem ipsam rerum molestiae porro sequi repellendus.</p>
         </section>
-        <section class="box-image">
+        <section>
             <article>
                 <h3>Extras 1</h3>
+
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique necessitatibus quibusdam ut labore voluptate corrupti soluta repudiandae sint eius natus! Tempora ipsa illum pariatur consequuntur atque facere quas ducimus beatae?</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita magni maiores blanditiis quos officiis saepe veritatis optio laboriosam nisi! Porro ducimus sit impedit numquam. Eaque veritatis placeat tempore quos voluptas?</p>
             </article>
         </section>
     </main>
