Atualização nos estilos do site e menu
Atualização nos estilos do site e menu

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil commodi deserunt odit, illo labore voluptates? Repudiandae esse neque perspiciatis praesentium. Et in modi, dolorem ipsam rerum molestiae porro sequi repellendus.</p>
         </section>
-        <section>
+        <section class="box3">
             <article>
                 <h3>Extras 1</h3>
 
@@ -69,7 +69,7 @@
         </section>
     </main>
     <footer>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Incidunt saepe voluptas rerum?</p>
+        <p>&copy; Miguel Angell</p>
     </footer>
 </body>
 </html>
